<resources>
    <string name="app_name">Stock Viewer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="stock_search">Ticker</string>
    <string name="stock">Stock:</string>
    <string name="date">Date:</string>
    <string name="price">Todays Price:</string>
    <string name="name">Name:</string>
    <string name="number">Number of Days:</string>

    <string-array name="nav_array">
        <item>Stock Graph</item>
        <item>Custom Date Range</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="start_date">Pick start date</string>
    <string name="end_date">Pick end date</string>

</resources>
